api de informações colocada, e poster do filme

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&family=Montserrat:wght@100;300;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>DevMovie</title>
   </head>
   <body>
